Fixed Domain Overflow & Hamburger Menu Issues

--- a/css/domain.css
+++ b/css/domain.css
@@ -1,7 +1,7 @@
 .domain {
     font-family: Raleway;
     text-align: justify;
-    height: 100vh;
+    /* height: 100vh; */
     width: 100vw;
 }
 
